--- a/app/src/main/res/layout/a_profile_club.xml
+++ b/app/src/main/res/layout/a_profile_club.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="10dp"
-        app:cardCornerRadius="40dp">
+        app:cardCornerRadius="20dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -395,6 +395,7 @@
                     android:layout_height="wrap_content"
                     app:layout_constraintTop_toBottomOf="@id/inforBasic"
                     app:layout_constraintLeft_toLeftOf="parent"
+                    android:orientation="vertical"
                     >
                     <TextView
 
@@ -404,14 +405,21 @@
                         android:text="List Player"
                         android:textSize="20dp"
                         android:textStyle="bold"
-                        >
+                        android:layout_weight="1">
                     </TextView>
+                    <Button
+                        android:layout_weight="0"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="See Detail"
+                        >
+                    </Button>
                 </LinearLayout>
                 <HorizontalScrollView
                     app:layout_constraintTop_toBottomOf="@id/crollView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/crollView2"
+                    android:id="@+id/crollView"
                     >
                     <LinearLayout
                         android:layout_gravity="center"
