--- a/app/src/main/res/layout/activity_main_profile.xml
+++ b/app/src/main/res/layout/activity_main_profile.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/viewpager" />
+<!--    adapter dau-->
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewpager"
