--- a/app/src/main/res/layout/fagment_edit_player.xml
+++ b/app/src/main/res/layout/fagment_edit_player.xml
@@ -2,7 +2,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -20,6 +19,7 @@
                 android:text="Edit information basic"
                 android:gravity="center_vertical"
                 android:textSize="20dp"
+                android:textColor="@color/white"
                 android:layout_weight="1"/>
             <ImageButton
                 android:id="@+id/image_btn_1"
@@ -27,49 +27,15 @@
                 android:layout_height="match_parent"
                 android:paddingHorizontal="15dp"
                 android:background="?android:attr/selectableItemBackground"
-                android:src="@drawable/ic_clear_black_24dp"/>
+                android:src="@drawable/ic_baseline_replay_white_24"/>
             <ImageButton
                 android:id="@+id/image_btn_2"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:paddingHorizontal="15dp"
                 android:background="?android:attr/selectableItemBackground"
-                android:src="@drawable/ic_baseline_access_time_24"/>
+                android:src="@drawable/ic_baseline_check_white_24"/>
         </LinearLayout>
     </androidx.appcompat.widget.Toolbar>
-    <LinearLayout
-        android:orientation="vertical"
-       app:layout_constraintTop_toBottomOf="@id/toolbar"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_width="0dp"
-        android:layout_height="0dp">
- <TextView
-     android:text="Tên"
-     android:layout_width="match_parent"
-     android:layout_height="wrap_content"></TextView>
-        <EditText
-            android:text="Chu Thanh Dat"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"></EditText>
-        <TextView
-            android:text="Phone"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"></TextView>
-        <EditText
-            android:text="0984060798"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"></EditText>
-        <TextView
-            android:text="Email"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"></TextView>
-        <EditText
-            android:text="datchuthanh98@gmail.com"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"></EditText>
-
-    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
