--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="white">#ffffff</color>
-    <color name="colorGray">#cc8800</color>
+    <color name="colorBG">#e6f9ff</color>
+    <color name="colorTittle">#006080</color>
 </resources>
