--- a/app/src/main/res/layout/activity_edit_team.xml
+++ b/app/src/main/res/layout/activity_edit_team.xml
@@ -75,11 +75,13 @@
                             android:textStyle="bold"></ImageButton>
                     </LinearLayout>
 
-                    <ImageButton
+                    <ImageView
+                        android:background="@drawable/avatar_team"
+                        android:id="@+id/avatarClub"
                         android:layout_width="wrap_content"
                         android:layout_height="400dp"
-                        android:background="@drawable/avatar_player"
-                        android:scaleType="fitXY"></ImageButton>
+
+                        android:scaleType="fitXY"></ImageView>
                 </LinearLayout>
 
                 <LinearLayout
@@ -110,11 +112,12 @@
                             android:textStyle="bold"></ImageButton>
                     </LinearLayout>
 
-                    <ImageButton
+                    <ImageView
+                        android:id="@+id/coverClub"
                         android:layout_width="wrap_content"
                         android:layout_height="400dp"
-                        android:background="@drawable/cover_player"
-                        android:scaleType="fitXY"></ImageButton>
+                        android:background="@drawable/cover_team"
+                        android:scaleType="fitXY"></ImageView>
 
                 </LinearLayout>
 
@@ -151,7 +154,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:drawableStart="@drawable/ic_baseline_account_box_24_blue"
-                        android:text=" Chu Thanh Dat"
+                        android:text=" Chelsea Football Club"
                         android:textSize="20dp"
                         android:textStyle="bold" />
 
@@ -159,7 +162,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:drawableStart="@drawable/ic_baseline_email_24_yeallow"
-                        android:text=" datchuthanh98@gmail.com"
+                        android:text=" chelsea@gmail.com"
                         android:textSize="16dp"
                         android:textStyle="bold" />
 
@@ -181,7 +184,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Information player"
+                        android:text="Information match"
                         android:textColor="@color/colorTittle"
                         android:textSize="20dp"
                         android:textStyle="bold"></TextView>
@@ -258,7 +261,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Introduce myself"
+                        android:text="Introduce about club"
                         android:textColor="@color/colorTittle"
                         android:textSize="20dp"
                         android:textStyle="bold"></TextView>
@@ -276,8 +279,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="
-Eden Michael Hazard là một cầu thủ bóng đá người Bỉ hiện đang chơi ở vị trí tiền đạo cho câu lạc bộ Real Madrid tại La Liga cũng như thi đấu cho đội tuyển Bỉ ở các giải đấu cấp độ đội tuyển. Anh là đội trưởng đội tuyển Bỉ."
+                    android:text="Câu lạc bộ bóng đá Chelsea là một câu lạc bộ bóng đá chuyên nghiệp có trụ sở tại Fulham, London, hiện đang thi đấu tại Giải bóng đá Ngoại hạng Anh"
                     android:textStyle="bold" />
             </LinearLayout>
         </ScrollView>
