--- a/app/src/main/res/layout/fragment_profile_field.xml
+++ b/app/src/main/res/layout/fragment_profile_field.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+    <data>
+        <import type="android.view.View" />
+
+    </data>
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBG">
@@ -65,7 +72,7 @@
             <ImageView
                 android:id="@+id/cover"
                 android:layout_width="match_parent"
-                android:src="@drawable/fieldcover"
+                android:src="@drawable/cover_field"
                 android:scaleType="fitXY"
                 android:layout_height="160dp"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -74,7 +81,7 @@
                 android:id="@+id/avatar"
                 android:layout_width="130dp"
                 android:layout_height="130dp"
-                android:src="@drawable/fieldcover"
+                android:src="@drawable/cover_field"
                 app:border_color="@color/white"
                 app:border_width="5dp"
                 app:layout_constraintBottom_toBottomOf="@id/cover"
@@ -139,7 +146,7 @@
                     <de.hdodenhof.circleimageview.CircleImageView
                         android:layout_width="80dp"
                         android:layout_height="80dp"
-                        android:src="@drawable/chelsealogo"
+                        android:src="@drawable/avatar_team"
                         app:border_color="@color/white"
                         app:border_width="5dp" />
                 </LinearLayout>
@@ -281,3 +288,4 @@
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
