--- a/app/src/main/res/layout/fragment_profile_team.xml
+++ b/app/src/main/res/layout/fragment_profile_team.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+    <data>
+        <import type="android.view.View" />
+
+    </data>
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBG">
@@ -69,7 +76,7 @@
                 android:id="@+id/cover"
                 android:layout_width="match_parent"
                 android:layout_height="160dp"
-                android:src="@drawable/coverclub"
+                android:src="@drawable/cover_team"
                 android:scaleType="fitXY"
 
                 app:layout_constraintTop_toTopOf="parent" />
@@ -78,7 +85,7 @@
                 android:id="@+id/avatar"
                 android:layout_width="130dp"
                 android:layout_height="130dp"
-                android:src="@drawable/chelsealogo"
+                android:src="@drawable/avatar_team"
                 app:border_color="@color/white"
                 app:border_width="5dp"
                 app:layout_constraintBottom_toBottomOf="@id/cover"
@@ -145,7 +152,7 @@
                         android:text="9.8"
                         android:layout_width="70dp"
                         android:layout_height="70dp"
-                        android:src="@drawable/chelsealogo"
+                        android:src="@drawable/avatar_team"
                         android:textSize="50dp"
                          />
                 </LinearLayout>
@@ -397,3 +404,4 @@
  </ScrollView>
     </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
