--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+ <data>
+  <import type="android.view.View" />
+
+ </data>
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
-     android:background="@drawable/bg"
+     android:background="@drawable/login_background"
      android:orientation="vertical"
      android:gravity="center"
      android:padding="5dp">
@@ -17,7 +22,7 @@
       android:id="@+id/image_user"
       android:layout_width="150dp"
       android:layout_height="150dp"
-      android:src="@drawable/chelsealogo" />
+      android:src="@drawable/avatar_team" />
 
 
   <EditText
@@ -91,3 +96,4 @@
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
