--- a/app/src/main/res/layout/fragment_profile_my_team.xml
+++ b/app/src/main/res/layout/fragment_profile_my_team.xml
@@ -9,7 +9,8 @@
     </data>
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
@@ -24,26 +25,20 @@
                 android:layout_weight="1"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="Information Field"
+                android:text="Information Team"
                 android:gravity="center_vertical"
                 android:textSize="20dp"
                 android:textColor="@color/white"/>
 
-            <ImageButton
-                android:id="@+id/btnCall"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:paddingHorizontal="15dp"
-                android:background="?android:attr/selectableItemBackground"
-                android:src="@drawable/ic_baseline_phone_24_green"/>
-            <ImageButton
-                android:id="@+id/btnEmail"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:paddingHorizontal="15dp"
-                android:background="?android:attr/selectableItemBackground"
-                android:src="@drawable/ic_baseline_email_24_yeallow"/>
 
+
+            <ImageButton
+                android:id="@+id/btnEdit"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:paddingHorizontal="15dp"
+                android:background="?android:attr/selectableItemBackground"
+                android:src="@drawable/ic_baseline_edit_30_white"/>
         </LinearLayout>
     </androidx.appcompat.widget.Toolbar>
 
@@ -51,6 +46,9 @@
         app:layout_constraintTop_toBottomOf="@id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+ <ScrollView
+     android:layout_width="match_parent"
+     android:layout_height="match_parent" >
     <androidx.cardview.widget.CardView
         android:layout_width ="match_parent"
         android:layout_height="match_parent"
@@ -64,16 +62,17 @@
             <ImageView
                 android:id="@+id/cover"
                 android:layout_width="match_parent"
-                android:src="@drawable/cover_field"
-                android:scaleType="fitXY"
                 android:layout_height="160dp"
+                android:src="@drawable/cover_team"
+                android:scaleType="fitXY"
+
                 app:layout_constraintTop_toTopOf="parent" />
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/avatar"
                 android:layout_width="130dp"
                 android:layout_height="130dp"
-                android:src="@drawable/cover_field"
+                android:src="@drawable/avatar_team"
                 app:border_color="@color/white"
                 app:border_width="5dp"
                 app:layout_constraintBottom_toBottomOf="@id/cover"
@@ -103,14 +102,14 @@
                         android:drawableStart="@drawable/ic_baseline_account_box_24_blue"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text=" Thanh Phuc Field"/>
+                        android:text=" Chelsea Footbal Club"/>
                     <TextView
                         android:drawableStart="@drawable/ic_baseline_email_24_yeallow"
                         android:textSize="16dp"
                         android:textStyle="bold"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text=" Thanhphuc@gmail.com"/>
+                        android:text=" Chelsea@gmail.com"/>
                     <TextView
                         android:drawableStart="@drawable/ic_baseline_phone_24_green"
                         android:textSize="16dp"
@@ -127,20 +126,22 @@
                     android:gravity="center"
                     >
                     <TextView
-                        android:textColor="@color/colorTittle"
                         android:textStyle="bold"
                         android:gravity="center"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:text="Team">
+                        android:text="Rating">
                     </TextView>
 
-                    <de.hdodenhof.circleimageview.CircleImageView
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
+                    <TextView
+
+                        android:gravity="center_horizontal"
+                        android:text="9.8"
+                        android:layout_width="70dp"
+                        android:layout_height="70dp"
                         android:src="@drawable/avatar_team"
-                        app:border_color="@color/white"
-                        app:border_width="5dp" />
+                        android:textSize="50dp"
+                         />
                 </LinearLayout>
 
             </LinearLayout>
@@ -194,7 +195,7 @@
                                 android:gravity="center"
                                 android:layout_width="match_parent"
                                 android:layout_height="30dp"
-                                android:text="Fỉelds">
+                                android:text="Matched">
                             </TextView>
                             <TextView
                                 android:textStyle="bold"
@@ -221,7 +222,7 @@
                                 android:gravity="center"
                                 android:layout_width="match_parent"
                                 android:layout_height="30dp"
-                                android:text="Cost">
+                                android:text="Playes">
                             </TextView>
                             <TextView
                                 android:textStyle="bold"
@@ -229,7 +230,7 @@
                                 android:gravity="center"
                                 android:layout_width="match_parent"
                                 android:layout_height="30dp"
-                                android:text="400,000">
+                                android:text="17">
                             </TextView>
                         </LinearLayout>
                     </androidx.cardview.widget.CardView>
@@ -248,7 +249,7 @@
                                 android:gravity="center"
                                 android:layout_width="match_parent"
                                 android:layout_height="30dp"
-                                android:text="Time">
+                                android:text="Different">
                             </TextView>
                             <TextView
                                 android:textStyle="bold"
@@ -256,28 +257,113 @@
                                 android:gravity="center"
                                 android:layout_width="match_parent"
                                 android:layout_height="30dp"
-                                android:text="7h-22h">
+                                android:text="58">
                             </TextView>
                         </LinearLayout>
                     </androidx.cardview.widget.CardView>
                 </LinearLayout>
-
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:id="@+id/gridRow1"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/weight"
+                        android:layout_margin="10dp"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        app:cardCornerRadius="10dp"
+                        >
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical">
+                            <TextView
+                                android:layout_margin="10dp"
+                                android:gravity="center"
+                                android:layout_width="match_parent"
+                                android:layout_height="30dp"
+                                android:text="Win">
+                            </TextView>
+                            <TextView
+                                android:textStyle="bold"
+                                android:layout_margin="10dp"
+                                android:gravity="center"
+                                android:layout_width="match_parent"
+                                android:layout_height="30dp"
+                                android:text="10">
+                            </TextView>
+                        </LinearLayout>
+                    </androidx.cardview.widget.CardView>
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/height"
+                        android:layout_margin="10dp"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        app:cardCornerRadius="10dp"
+                        >
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical">
+                            <TextView
+                                android:layout_margin="10dp"
+                                android:gravity="center"
+                                android:layout_width="match_parent"
+                                android:layout_height="30dp"
+                                android:text="Drawn">
+                            </TextView>
+                            <TextView
+                                android:textStyle="bold"
+                                android:layout_margin="10dp"
+                                android:gravity="center"
+                                android:layout_width="match_parent"
+                                android:layout_height="30dp"
+                                android:text="4">
+                            </TextView>
+                        </LinearLayout>
+                    </androidx.cardview.widget.CardView>
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/agePlayer"
+                        android:layout_margin="10dp"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        app:cardCornerRadius="10dp"
+                        >
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical">
+                            <TextView
+                                android:layout_margin="10dp"
+                                android:gravity="center"
+                                android:layout_width="match_parent"
+                                android:layout_height="30dp"
+                                android:text="Lose">
+                            </TextView>
+                            <TextView
+                                android:textStyle="bold"
+                                android:layout_margin="10dp"
+                                android:gravity="center"
+                                android:layout_width="match_parent"
+                                android:layout_height="30dp"
+                                android:text="3">
+                            </TextView>
+                        </LinearLayout>
+                    </androidx.cardview.widget.CardView>
+                </LinearLayout>
             </LinearLayout>
-            <Button
-                android:drawableStart="@drawable/ic_baseline_join_24_green"
-                android:id="@+id/btnListMatch"
-                app:layout_constraintTop_toBottomOf="@+id/listGridData"
+            <LinearLayout
+                android:orientation="vertical"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                android:text="List Match"
-                android:layout_width="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/listGridData"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-            </Button>
-
-
-
+            </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
-</androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+ </ScrollView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
