--- a/app/src/main/res/layout/fragment_profile_team.xml
+++ b/app/src/main/res/layout/fragment_profile_team.xml
@@ -9,8 +9,7 @@
     </data>
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/colorBG">
+    android:layout_height="match_parent">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
@@ -45,13 +44,7 @@
                 android:background="?android:attr/selectableItemBackground"
                 android:src="@drawable/ic_baseline_email_24_yeallow"/>
 
-            <ImageButton
-                android:id="@+id/btnEdit"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:paddingHorizontal="15dp"
-                android:background="?android:attr/selectableItemBackground"
-                android:src="@drawable/ic_baseline_edit_30_white"/>
+
         </LinearLayout>
     </androidx.appcompat.widget.Toolbar>
 
@@ -366,39 +359,16 @@
                     </androidx.cardview.widget.CardView>
                 </LinearLayout>
             </LinearLayout>
-            <LinearLayout
-                android:orientation="vertical"
+
+            <Button
+                android:id="@+id/btnMatching"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/listGridData"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                    <TextView
-                        android:textColor="@color/colorTittle"
-                        android:layout_weight="1"
-                        android:layout_marginLeft="10dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="List Player"
-                        android:textSize="20dp"
-                        android:textStyle="bold">
-                    </TextView>
-                    <Button
-                        android:text="See more"
-                        android:id="@+id/btnListPlayer"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
-
-                    </Button>
-                </LinearLayout>
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recycleViewListPlayerHorizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
-            </LinearLayout>
+                android:drawableStart="@drawable/ic_baseline_join_24_green"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Matching"></Button>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
  </ScrollView>
