--- a/app/src/main/res/layout/item_team_vertical.xml
+++ b/app/src/main/res/layout/item_team_vertical.xml
@@ -27,7 +27,7 @@
             android:id="@+id/avatarPlayer"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            app:srcCompat="@drawable/player_default"
+            app:srcCompat="@drawable/avatar_team"
             />
         <TextView
             android:textStyle="bold"
