--- a/app/src/main/res/layout/fragment_main_field.xml
+++ b/app/src/main/res/layout/fragment_main_field.xml
@@ -22,24 +22,11 @@
                 android:id="@+id/title"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:text="Edit information basic"
+                android:text="Information Field"
                 android:gravity="center_vertical"
                 android:textSize="20dp"
                 android:layout_weight="1"/>
-            <ImageButton
-                android:id="@+id/image_btn_1"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:paddingHorizontal="15dp"
-                android:background="?android:attr/selectableItemBackground"
-                android:src="@drawable/ic_baseline_replay_white_24"/>
-            <ImageButton
-                android:id="@+id/image_btn_2"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:paddingHorizontal="15dp"
-                android:background="?android:attr/selectableItemBackground"
-                android:src="@drawable/ic_baseline_check_white_24"/>
+
         </LinearLayout>
     </androidx.appcompat.widget.Toolbar>
 
