--- a/app/src/main/res/layout/item_field_vertical.xml
+++ b/app/src/main/res/layout/item_field_vertical.xml
@@ -58,7 +58,10 @@
                 android:text="10"
                 android:textSize="30dp"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+
+
+                >
 
             </TextView>
 
