--- a/app/src/main/res/layout/fragment_list_my_team.xml
+++ b/app/src/main/res/layout/fragment_list_my_team.xml
@@ -17,7 +17,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_margin="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="0dp">
+                android:layout_height="match_parent">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -33,7 +33,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Tìm kiếm:"
-                            android:textSize="20dp"></TextView>
+                            android:textSize="20dp"/>
 
                         <EditText
                             android:id="@+id/txtName"
@@ -50,7 +50,12 @@
 <!--                    android:adapter="@{viewModel.adapter}"-->
 
                 </LinearLayout>
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:src="@drawable/ic_baseline_calendar_today_24"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
