--- a/app/src/main/res/layout/fragment_main_field.xml
+++ b/app/src/main/res/layout/fragment_main_field.xml
@@ -42,6 +42,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/tablayout"
+        app:layout_constraintBottom_toBottomOf="parent"
          />
 </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
