--- a/app/src/main/res/layout/fragment_main_match.xml
+++ b/app/src/main/res/layout/fragment_main_match.xml
@@ -1,22 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
         <import type="android.view.View" />
-        <variable
-            name="todo"
-            type="com.example.myclub.model.Todo" />
     </data>
-
 <androidx.constraintlayout.widget.ConstraintLayout
-      android:background="@color/white"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-   >
-
-
+    android:layout_height="match_parent">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
@@ -31,157 +22,33 @@
                 android:id="@+id/title"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:text="Edit information basic"
+                android:text="Information Field"
                 android:gravity="center_vertical"
                 android:textSize="20dp"
                 android:layout_weight="1"/>
 
-            <ImageButton
-                android:id="@+id/image_btn_2"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:paddingHorizontal="15dp"
-                android:background="?android:attr/selectableItemBackground"
-                android:src="@drawable/ic_baseline_check_white_24"/>
         </LinearLayout>
     </androidx.appcompat.widget.Toolbar>
-    <LinearLayout
-      app:layout_constraintTop_toBottomOf="@id/toolbar"
+
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tablayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        app:layout_constraintTop_toBottomOf="@id/toolbar"/>
+<!--    adapter dau-->
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/viewpager"
         android:layout_width="match_parent"
-        android:layout_height="150dp">
-
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/label2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/label1"
-            app:layout_constraintBottom_toBottomOf="parent"
-           >
-
-
-            <de.hdodenhof.circleimageview.CircleImageView
-                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintRight_toLeftOf="@id/score1"
-                android:id="@+id/club1"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:src="@drawable/avatar_team"
-                app:border_color="@color/white"
-                app:border_width="5dp" />
-
-
-
-            <TextView
-                android:gravity="center"
-
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintLeft_toRightOf="@id/club1"
-                app:layout_constraintRight_toLeftOf="@id/diffence"
-                android:id="@+id/score1"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-
-                android:text="0" />
-
-            <TextView
-                android:gravity="center"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintLeft_toRightOf="@id/score1"
-                app:layout_constraintRight_toLeftOf="@id/score2"
-                android:id="@+id/diffence"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:text="-" />
-
-            <TextView
-                android:gravity="center"
-                app:layout_constraintLeft_toRightOf="@id/diffence"
-                app:layout_constraintRight_toLeftOf="@id/club2"
-                app:layout_constraintTop_toTopOf="parent"
-                android:id="@+id/score2"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:text="0" />
-
-
-
-            <de.hdodenhof.circleimageview.CircleImageView
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintLeft_toRightOf="@id/score2"
-                app:layout_constraintRight_toRightOf="parent"
-                android:id="@+id/club2"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:src="@drawable/manulogo"
-                app:border_color="@color/white"
-                app:border_width="5dp"
-
-                />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/label1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toTopOf="@id/label2"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <TextView
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toLeftOf="@id/time"
-                android:id="@+id/date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="11/12/2020" />
-
-            <TextView
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintLeft_toRightOf="@id/date"
-                app:layout_constraintRight_toLeftOf="@id/status"
-                android:id="@+id/time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="12h 30" />
-
-            <TextView
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintLeft_toRightOf="@id/time"
-                app:layout_constraintRight_toRightOf="parent"
-                android:id="@+id/status"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Sắp diễn ra" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/tablayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-             app:layout_constraintTop_toTopOf="parent">
-
-        </com.google.android.material.tabs.TabLayout>
-        <!--    adapter dau-->
-
-        <androidx.viewpager.widget.ViewPager
-            android:id="@+id/viewpager"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/tablayout"
-            />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-    </LinearLayout>
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/tablayout" />
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginEnd="10dp"
+        android:src="@drawable/ic_baseline_calendar_today_24"
+        android:layout_marginBottom="10dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
