--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -5,18 +5,29 @@
     xmlns:tools="http://schemas.android.com/tools">
     <data>
         <import type="android.view.View" />
-
     </data>
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 <TextView
-    android:layout_width="wrap_content"
+    android:id="@+id/lblGoogleMap"
+    android:gravity="center"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintBottom_toBottomOf="parent"
-    android:text="Google Map"></TextView>
+    android:text="Google Map banh mi sai gon dac biet thom ngon luon ca nha oi , that su la vay luon"
+
+
+     android:focusable="true"
+    android:focusableInTouchMode="true"
+    android:singleLine="true"
+    android:scrollHorizontally="true"
+    android:ellipsize="marquee"
+    android:marqueeRepeatLimit ="marquee_forever"
+
+    ></TextView>
 </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
